# gaul-examples-1849-0

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.org  configure  configure.in  gaul-examples.spec  mkinstalldirs
debian/: Makefile.in
src/: Makefile.am  Makefile.in  polynomial_de.c  polynomial_ga.c  polynomial_sa.c
